医院列表代码

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -78,7 +78,7 @@
             setTimeout(showError, 4000);
         }
         function showError() {
-            document.getElementById("jhipster-error").style.display="block";
+            // document.getElementById("jhipster-error").style.display="block";
         }
     </script>
     <!-- uncomment this for adding service worker
